--- a/hoj-springboot/DataBackup/src/main/resources/bootstrap.yml
+++ b/hoj-springboot/DataBackup/src/main/resources/bootstrap.yml
@@ -1,5 +1,8 @@
-# nacos配置
-nacos-url: ${NACOS_URL:127.0.0.1:8848}
+# nacos配置（支持 NACOS_URL 或 NACOS_HOST/NACOS_PORT）
+nacos.enabled: ${NACOS_ENABLED:true}
+nacos-host: ${NACOS_HOST:127.0.0.1}
+nacos-port: ${NACOS_PORT:8848}
+nacos-url: ${NACOS_URL:${nacos-host}:${nacos-port}}
 nacos-username: ${NACOS_USERNAME:root}
 nacos-password: ${NACOS_PASSWORD:hoj123456}
 nacos-switch-config: hoj-switch.yml
@@ -13,10 +16,12 @@ spring:
   cloud:
     nacos:
       discovery:
+        enabled: ${nacos.enabled} # 通过 nacos.enabled 统一控制开关（本地可设 false）
         username: ${nacos-username}
         password: ${nacos-password}
         server-addr: ${nacos-url} # Nacos 作为服务注册中心 nacos的地址
       config:
+        enabled: ${nacos.enabled}
         username: ${nacos-username}
         password: ${nacos-password}
         server-addr: ${nacos-url}  #Nacos 作为配置中心地址 nacos的地址
