--- a/hoj-springboot/JudgeServer/pom.xml
+++ b/hoj-springboot/JudgeServer/pom.xml
@@ -17,6 +17,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>2.2.6.RELEASE</version>
                 <configuration>
                     <!-- 指定该Main Class为全局的唯一入口 -->
                     <mainClass>top.hcode.hoj.JudgeServerApplication</mainClass>
@@ -38,6 +39,13 @@
                     <source>8</source>
                     <target>8</target>
                     <encoding>UTF-8</encoding>
+                    <annotationProcessorPaths>
+                        <path>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok</artifactId>
+                            <version>${lombok.version}</version>
+                        </path>
+                    </annotationProcessorPaths>
                 </configuration>
             </plugin>
         </plugins>
@@ -45,6 +53,12 @@
 
 
     <dependencies>
+        <!-- Load .env into Spring Environment for JudgeServer -->
+        <dependency>
+            <groupId>me.paulschwarz</groupId>
+            <artifactId>spring-dotenv</artifactId>
+            <version>3.0.0</version>
+        </dependency>
         <dependency>
             <groupId>top.hcode</groupId>
             <artifactId>hoj-api</artifactId>
